# rsflarecord

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  TROUBLESHOOTING.md  rust-toolchain.toml
.github/workflows/: codeql.yml
docs/: ARCHITECTURE.md  BOT.md  COMMANDS.md  ERRORS.md  INTERACTIONS.md  OPTIONS.md  RESPONSES.md  WASM.md
examples/components/: .env.local.example  Cargo.toml  wrangler.toml
examples/components/src/: lib.rs
examples/components/src/commands/: hello.rs
examples/components/src/components/: mod.rs  mycomponent.rs
examples/simple/: Cargo.toml  wrangler.toml
examples/simple/src/: lib.rs
examples/subcommands/: Cargo.toml  wrangler.toml
examples/subcommands/src/: lib.rs
examples/subcommands/src/commands/: mod.rs
examples/with_commands/: Cargo.toml  wrangler.toml
examples/with_commands/src/: lib.rs
examples/with_commands/src/commands/: hello.rs
examples/with_commands/src/components/: mycomponent.rs
src/: bot.rs  crypto.rs  error.rs  lib.rs  prelude.rs
src/bot/: builder.rs  mod.rs  state.rs
src/models/: autocomplete.rs  command.rs  interaction.rs  mod.rs  response.rs  user.rs
src/models/attachment/: builder.rs  incoming.rs  mod.rs  outgoing.rs
src/models/autocomplete/: context.rs  data.rs  dispatcher.rs  interaction.rs  mod.rs  response.rs  value.rs
src/models/autocomplete/response/: builder.rs  mod.rs
src/models/color/: mod.rs
src/models/command/: context.rs  data.rs  dispatcher.rs  interaction.rs  mod.rs  response.rs  serializable.rs
src/models/command/option/: builder.rs  mod.rs  value.rs
src/models/command/response/: builder.rs  mod.rs
src/models/components/: context.rs  data.rs  dispatcher.rs  interaction.rs  mod.rs
src/models/components/content/: media_gallery.rs  mod.rs  text_display.rs  thumbnail.rs
src/models/embed/: author.rs  footer.rs  image.rs  mod.rs  provider.rs  thumbnail.rs  video.rs
src/models/modal/: context.rs  data.rs  interaction.rs  mod.rs
src/models/modals/: interaction.rs  mod.rs
src/services/: discord.rs
src/traits/: component.rs  mod.rs  resolvable.rs
(+12 files in other folders)
