[package]
name = "flarecord"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "examples/with_commands",
    "examples/simple",
    "."
]

[dependencies]
worker = "0.8.3"

twilight-model = { version = "0.17.1", default-features = false }
twilight-validate = { version = "0.17.0", default-features = false }
twilight-util = { version = "0.17.0", features = ["full"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

ed25519-dalek = "2.2.0"
hex = "0.4.3"
thiserror = "2.0.18"
async-trait = "0.1.89"