[package]
name = "flarecord"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "examples/with_commands",
    "examples/simple",
    "."
, "examples/subcommands"]

[dependencies]
worker = "^0.8"
reqwest = { version = "^0.13", features = [ "json" ] }
async-trait = "^0.1"

twilight-model = { version = "^0.17", default-features = false }
twilight-validate = { version = "^0.17", default-features = false }
twilight-util = { version = "^0.17", features = ["full"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
hex = "^0.4"

ed25519-dalek = "^2.2"
