[package]
name = "with_commands"
version = "0.1.0"
edition = "2021"
authors = ["GitGinocchio <106624847+GitGinocchio@users.noreply.github.com>"]



[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8" }
worker-macros = { version = "0.8" }

async-trait = "0.1.89"

rsflarecord = { path = "../../" }
